@@ -14,10 +14,10 @@ index cf76412e2b..c21c8f2bf4 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index f7e826ca9a..dc6efd5750 100644
+index 284ed988e4..006880828a 100644
 --- a/Changes
 +++ b/Changes
-@@ -699,11 +699,6 @@ OCaml 5.0
+@@ -704,11 +704,6 @@ OCaml 5.0
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -29,7 +29,7 @@ index f7e826ca9a..dc6efd5750 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -719,6 +714,26 @@ OCaml 5.0
+@@ -724,6 +719,26 @@ OCaml 5.0
    mismatch error involving recursive types.
    (Florian Angeletti, review by Gabriel Scherer)
  
@@ -56,7 +56,7 @@ index f7e826ca9a..dc6efd5750 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -754,13 +769,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -759,13 +774,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -72,7 +72,7 @@ index f7e826ca9a..dc6efd5750 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -867,6 +882,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -872,6 +887,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -82,7 +82,7 @@ index f7e826ca9a..dc6efd5750 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1126,6 +1144,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1131,6 +1149,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10059,7 +10059,7 @@ index 0000000000..464eb345bc
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..4a2739d03f
+index 0000000000..adcaf46321
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10002 @@
@@ -10079,10 +10079,10 @@ index 0000000000..4a2739d03f
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index f7e826ca9a..dc6efd5750 100644
++index 284ed988e4..006880828a 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -699,11 +699,6 @@ OCaml 5.0
++@@ -704,11 +704,6 @@ OCaml 5.0
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10094,7 +10094,7 @@ index 0000000000..4a2739d03f
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -719,6 +714,26 @@ OCaml 5.0
++@@ -724,6 +719,26 @@ OCaml 5.0
 +   mismatch error involving recursive types.
 +   (Florian Angeletti, review by Gabriel Scherer)
 + 
@@ -10121,7 +10121,7 @@ index 0000000000..4a2739d03f
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -754,13 +769,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -759,13 +774,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10137,7 +10137,7 @@ index 0000000000..4a2739d03f
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -867,6 +882,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -872,6 +887,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10147,7 +10147,7 @@ index 0000000000..4a2739d03f
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1126,6 +1144,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1131,6 +1149,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
